input text align justifications added and worker crud issues fixed

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -34,3 +34,15 @@
 .vs-navbar--item a {
   font-size: 1rem;
 }
+
+.vs-input-text-right input {
+  text-align: right;
+}
+
+.vs-input-text-left input {
+  text-align: left;
+}
+
+.vs-input-text-center input {
+  text-align: center;
+}
